--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -14,3 +14,16 @@ set(LIGHT_YEARS_GAME_TARGET_NAME LightYearsGame)
 
 # will find the cmakelists in the src folder
 add_subdirectory(LightYears)
+
+
+# Adding SFML
+include(FetchContent)
+
+FetchContent_Declare(
+    SFML
+    GIT_REPOSITORY https://github.com/SFML/SFML.git
+    GIT_TAG 2.6.1
+    GIT_SHALLOW FALSE
+)
+
+FetchContent_MakeAvailable(SFML)
