--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 4.0.2)
+cmake_minimum_required(VERSION 3.14)
 
 project(LightYears
     VERSION 1.0.0
@@ -9,14 +9,6 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# creates a variable called LightYearsGame
-set(LIGHT_YEARS_GAME_TARGET_NAME LightYearsGame)
-
-# will find the cmakelists in the src folder
-add_subdirectory(LightYears)
-
-
-# Adding SFML
 include(FetchContent)
 
 FetchContent_Declare(
@@ -27,3 +19,6 @@ FetchContent_Declare(
 )
 
 FetchContent_MakeAvailable(SFML)
+
+# Add game source
+add_subdirectory(LightYears)
