--- a/LightYears/CmakeLists.txt
+++ b/LightYears/CmakeLists.txt
@@ -1,3 +1,30 @@
+set(LIGHT_YEARS_GAME_TARGET_NAME LightYearsGame)
+
 add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
 )
+
+# Add SFML headers manually (FetchContent doesn't always auto-link includes)
+target_include_directories(${LIGHT_YEARS_GAME_TARGET_NAME}
+    PUBLIC ${sfml_SOURCE_DIR}/include
+)
+
+# Link all SFML modules
+target_link_libraries(${LIGHT_YEARS_GAME_TARGET_NAME}
+    PUBLIC
+        sfml-graphics
+        sfml-window
+        sfml-system
+        sfml-audio
+)
+
+# Post-build: copy .dylib files next to the executable on macOS
+if(APPLE)
+    foreach(MODULE graphics window system audio)
+        add_custom_command(TARGET ${LIGHT_YEARS_GAME_TARGET_NAME} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                $<TARGET_FILE:sfml-${MODULE}>
+                $<TARGET_FILE_DIR:${LIGHT_YEARS_GAME_TARGET_NAME}>
+        )
+    endforeach()
+endif()
